fixed image responsive in mobile view

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </script>
   </head>
   <body>
+    <div class="pageWrap">
     <div class="img-fluid entry" alt="Responsive image">
       <div class="introText">
          <h6>portfolio of</h6>
@@ -63,6 +64,7 @@
           </div>
         </div>
   </div>
+</div>
 
   <div class="img-fluid contact" alt="Responsive image">
     <h5 class="color fixPlace">Contact Me</h5>
