fully mobile responsive

--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
 
   <div class="container recentprojects">
     <h5>Recent Projects</h5>
+    <div class="container">
     <div class="card-deck">
     <div class="card card1" style="width: 18rem;">
         <img src="https://www.gifcoin.io/assets/images/default/frontend/loader-krasi.gif" class="card-img-top" alt="unit4Game">
         <div class="card-body">
           <h5 class="card-title color">RPG Space Game</h5>
           <p class="card-text color">RPG game made with javascript and jquery along as simple HTML and CSS.</p>
-          <a href="https://github.com/zaiverse/unit-4-game" class="btn btn-primary">Github Code</a>
-          <a href="https://zaiverse.github.io/unit-4-game/" class="btn btn-primary">Live Demo</a>
+          <a href="https://github.com/zaiverse/unit-4-game" class="btn btn-primary buttonsFirstCard">Github Code</a>
+          <a href="https://zaiverse.github.io/unit-4-game/" class="btn btn-primary buttonsFirstCard">Live Demo</a>
         </div>
       </div>
       <div class="card card2" style="width: 18rem;">
@@ -49,8 +50,8 @@
           <div class="card-body">
             <h5 class="card-title color">Sea Trivia Game</h5>
             <p class="card-text color">Check out my Sea Trivia game where you must answer questions regarding ocean facts, but don't run out of time!</p>
-            <a href="https://github.com/zaiverse/TriviaGame" class="btn btn-primary">Github Code</a>
-            <a href="https://zaiverse.github.io/TriviaGame/" class="btn btn-primary">Live Demo</a>
+            <a href="https://github.com/zaiverse/TriviaGame" class="btn btn-primary buttonsSecondCard">Github Code</a>
+            <a href="https://zaiverse.github.io/TriviaGame/" class="btn btn-primary buttonsSecondCard">Live Demo</a>
           </div>
         </div>
         <div class="card card3" style="width: 18rem;">
@@ -58,18 +59,19 @@
             <div class="card-body">
               <h5 class="card-title color">Chinese Moviac</h5>
               <p class="card-text color">Chinese Moviac is a group project in which I worked with technologies such as javascript, jquery, and firebase.</p>
-              <a href="https://github.com/danielrmorenop/group-project" class="btn btn-primary">Github Code</a>
-              <a href="https://danielrmorenop.github.io/group-project/" class="btn btn-primary">Live Demo</a>
+              <a href="https://github.com/danielrmorenop/group-project" class="btn btn-primary buttonsThirdCard">Github Code</a>
+              <a href="https://danielrmorenop.github.io/group-project/" class="btn btn-primary buttonsThirdCard">Live Demo</a>
             </div>
           </div>
         </div>
+      </div>
   </div>
 </div>
 
   <div class="img-fluid contact" alt="Responsive image">
     <h5 class="color fixPlace">Contact Me</h5>
     <p class="color">Email: brenda.garcia007@mymdc.net</p>
-    <p class="color">Phone: 305-615-9049</p>
+    <p class="color fixPlaceBottom">Phone: 305-615-9049</p>
   </div>
 
     <!-- Optional JavaScript -->
