added group project

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
               <a href="https://danielrmorenop.github.io/group-project/" class="btn btn-primary buttonsThirdCard">Live Demo</a>
             </div>
           </div>
+          <div class="card card1" style="width: 18rem;">
+            <img src="http://33.media.tumblr.com/ec39d3975517fdbcad9bf289d035fbbd/tumblr_n843inIVBW1tfir0mo1_r1_500.gif" class="card-img-top editPhotospace" alt="unit4Game">
+            <div class="card-body">
+              <h5 class="card-title color">Parkalytics</h5>
+              <p class="card-text color">An app intended to track and calculate the amount spent yearly/monthly on parking. I worked with express, node, mySQL database, and javascript.</p>
+              <a href="https://github.com/AlexTorres1/parking" class="btn btn-primary buttonsFirstCard">Github Code</a>
+              <a href="#" class="btn btn-primary buttonsFirstCard">Live Demo</a>
+            </div>
+          </div>
         </div>
       </div>
   </div>
