In progress - changing project section look

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
   <div class="container aboutMe">
     <h5>About me</h5>
-    <p>My name is Brenda Garcia. I would not consider myself an expert in technology, but I am always eager to learn and gain experience in the field. Currently, I am a sophomore majoring in Computer Science at Miami-Dade College. I am a University of Miami coding bootcamp full-stack developer graduate that has experience working with front-end and back-end technologies. I have worked with languages such as c++, java, and javascript, as well as databases MySQL and MongoDB. I have experience with Node.js among browser based technologies such as firebase, HTML5, CSS, Bootstrap, React.js, and jQuery.</p>
+    <p>My name is Brenda Garcia. I would not consider myself an expert in technology, but I am always eager to learn and gain experience in the field. Currently, I am a sophomore majoring in Computer Science at Miami-Dade College. I am a University of Miami coding bootcamp full-stack developer graduate that has experience working with front-end and back-end technologies. I have experience working with javascript, as well as databases MySQL and MongoDB. I also have experience with Node.js among other browser based technologies such as firebase, HTML5, CSS, Bootstrap, React.js, and jQuery.</p>
   </div>
 
-  <div class="container recentprojects">
+  <!-- <div class="container recentprojects">
     <h5>Recent Projects</h5>
     <div class="container">
     <div class="card-deck">
@@ -73,7 +73,47 @@
             </div>
           </div>
         </div>
+      </div> -->
+      <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
       </div>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
