--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     </div>
   <div class="container aboutMe">
     <h5>About me</h5>
-    <p>My name is Brenda Garcia. I would not consider myself an expert in technology, but I am always eager to learn and gain experience in the field. Currently, I am a sophomore majoring in Computer Science at Miami-Dade College. I am a University of Miami coding bootcamp full-stack developer graduate that has experience working with front-end and back-end technologies. I have experience working with javascript, as well as databases MySQL and MongoDB. I also have experience with Node.js among other browser based technologies such as firebase, HTML5, CSS, Bootstrap, React.js, and jQuery.</p>
+    <p>My name is Brenda Garcia. I would not consider myself an expert in technology, but I am always eager to learn and gain experience in the field. Currently, I am a sophomore majoring in Computer Science at Miami-Dade College. I am a University of Miami coding bootcamp full-stack developer graduate that has experience working with front-end and back-end technologies. I have experience working with javascript, as well as databases MySQL and MongoDB. I also have experience with Node.js among other technologies such as firebase, HTML5, CSS, Bootstrap, React.js, and jQuery.</p>
   </div>
 
-  <!-- <div class="container recentprojects">
+  <div class="container recentprojects">
     <h5>Recent Projects</h5>
     <div class="container">
     <div class="card-deck">
@@ -69,58 +69,16 @@
               <h5 class="card-title color">Parkalytics</h5>
               <p class="card-text color">An app intended to track and calculate the amount spent yearly/monthly on parking. I worked with express, node, mySQL database, and javascript.</p>
               <a href="https://github.com/AlexTorres1/parking" class="btn btn-primary buttonsFirstCard">Github Code</a>
-              <a href="#" class="btn btn-primary buttonsFirstCard">Live Demo</a>
-            </div>
-          </div>
-        </div>
-      </div> -->
-      <div class="container">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
       </div>
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
   </div>
-</div>
 
   <div class="img-fluid contact" alt="Responsive image">
     <h5 class="color fixPlace">Contact Me</h5>
     <p class="color">Email: brenda.garcia007@mymdc.net</p>
-    <p class="color fixPlaceBottom">Phone: 305-615-9049</p>
+    <p class="color fixPlaceBottom">Github: <a href="https://github.com/zaiverse" class="color">click here</a></p>
   </div>
 
     <!-- Optional JavaScript -->
